# taille

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  TODO  autoclean.sh  autogen.sh  config.h.in  configure.ac
po/: POTFILES.in  fr_FR.po  gettext_commande  taille.po
po/.svn/: all-wcprops  entries
po/.svn/text-base/: POTFILES.in.svn-base  gettext_commande.svn-base
src/: Makefile.am  taille.c
src/.svn/: all-wcprops  entries
src/.svn/text-base/: Makefile.am.svn-base  file_creation.c.svn-base  gstressfs.c.svn-base  gstressfs.glade.svn-base
src/include/: taille.h
src/include/.svn/: all-wcprops  entries
src/include/.svn/text-base/: file_creation.h.svn-base  gstressfs.h.svn-base
